Use ProcessBuilder to open terminal emulator
TODO: replace Runtime.exec() in other places