@@ -11,6 +11,9 @@ package ru.naumen.servacc.platform;
 import java.io.File;
 import java.io.IOException;
 import java.text.MessageFormat;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 
 import ru.naumen.servacc.util.Util;
 
@@ -23,7 +26,15 @@ public class Windows implements Platform
     @Override
     public void openTerminal(int localPort, String options) throws IOException
     {
-        Runtime.getRuntime().exec(MessageFormat.format("cmd /C start putty {1} -telnet 127.0.0.1 -P {0,number,#}", localPort, options));
+        List<String> command = new ArrayList<String>();
+        command.add("putty");
+        String[] splitOptions = options.split(" ");
+        for (String opt : splitOptions)
+        {
+            command.add(opt);
+        }
+        command.addAll(Arrays.asList("-telnet", "127.0.0.1", "-P", "" + localPort));
+        new ProcessBuilder(command).start();
     }
 
     @Override
